tests/semantic_cases/invalid/writestring_too_many_args.ob0
(* INVALID: WriteString builtin is called with too many arguments *)
MODULE Main;
BEGIN
  WriteString("Hello", "World")
END Main.
